--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,8 @@ theme: jekyll-theme-minimal
 
 github:
   is_project_page: false
+
+title: Yuan Meng's Home Page
+description: This is Yuan Meng. Welcome to my personal territory.
+
+logo: [Location of the logo]
