--- a/_config.yml
+++ b/_config.yml
@@ -6,4 +6,4 @@ github:
 title: Yuan Meng's Home Page
 description: This is Yuan Meng. Welcome to my personal territory.
 
-logo: [Location of the logo]
+logo: https://github.com/CatherineMeng/main-page/blob/master/pics/IMG_0720.jpg
