--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,6 @@ github:
   is_project_page: false
 
 title: Yuan Meng's Home Page
-description: This is Yuan Meng. Welcome to my personal territory.
+description: This is Yuan Meng. Welcome to my territory.
 
 logo: pics/IMG_0720.jpg
