--- a/_config.yml
+++ b/_config.yml
@@ -6,4 +6,4 @@ github:
 title: Yuan Meng's Home Page
 description: This is Yuan Meng. Welcome to my territory.
 
-logo: pics/IMG_0720.jpg
+logo: pics/js.jpeg
